# python-project-lvl2

./: .travis.yml  Makefile  coverage.xml  pyproject.toml
gendiff/: engine.py  parsers.py
gendiff/files/: after.json  before.json
gendiff/scripts/: gendiff.py
gendiff/tests/fixtures/: first.json  second.json
tests/: test_json.py
tests/.pytest_cache/v/cache/: lastfailed
tests/fixtures/: old_recur.json  simple_new.yml  simple_old.yml
