[tool.poetry]
name = "python-project-lvl2"
version = "0.1.0"
description = ""
packages = [
  { include = "gendiff" },
]
authors = ["ushankax <ushanka.x@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
